--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "new webpack for react and vue and so on",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "cross-env PORT=3214 node ./config/env.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/wklc2014/learn-webpack/issues"
   },
-  "homepage": "https://github.com/wklc2014/learn-webpack#readme"
+  "homepage": "https://github.com/wklc2014/learn-webpack#readme",
+  "devDependencies": {
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.11.1"
+  }
 }
