--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "new webpack for react and vue and so on",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env PORT=3214 node ./config/env.js"
+    "start": "webpack-dev-server --config ./config/webpack.config.dev.js"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,38 @@
   },
   "homepage": "https://github.com/wklc2014/learn-webpack#readme",
   "devDependencies": {
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.18",
+    "copy-webpack-plugin": "^4.3.1",
+    "cross-env": "^5.1.3",
+    "css-loader": "^0.28.9",
+    "eslint": "^4.17.0",
+    "eslint-loader": "^1.9.0",
+    "file-loader": "^1.1.6",
+    "html-webpack-plugin": "^2.30.1",
+    "react-dev-utils": "^5.0.0",
+    "style-loader": "^0.20.1",
+    "url-loader": "^0.6.2",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1"
+  },
+  "dependencies": {
+    "antd": "^3.2.0",
+    "axios": "^0.17.1",
+    "babel-core": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "dotenv": "^5.0.0",
+    "is_js": "^0.9.0",
+    "lodash": "^4.17.5",
+    "mirrorx": "^0.2.10",
+    "moment": "^2.20.1",
+    "node-uuid": "^1.4.8",
+    "react": "^16.2.0",
+    "react-ace": "^5.9.0",
+    "react-dom": "^16.2.0",
+    "simditor": "^2.3.6"
   }
 }
